Fix div tag close wrong position in Journey

--- a/mystyle.css
+++ b/mystyle.css
@@ -269,6 +269,11 @@ body {
         display: flex;
         justify-content: center;
     }
+
+    .CENTER-W{
+        display: flex;
+        justify-content: center;
+    }
     h1,
     h3 {
         font-family: 'Courier New', Courier, monospace;
